--- a/OrgaTournoi/Views/Equipes/Details.cshtml
+++ b/OrgaTournoi/Views/Equipes/Details.cshtml
@@ -2,47 +2,17 @@
 
 @{
     ViewData["Title"] = "Details";
+    ViewData["lien"] = "/css/liste.css";
 }
 
-<h1>Details</h1>
+<div class="container-fluid gauche-droite">
+    <div class="gauche text-center">
+        <h2>@Model.Nom <img src="@Model.Pays.Image" style="max-width:20px;" /></h2>
+        <img src="@Model.Image" style="width:150px; height:150px; text-align:center; margin:auto;" />
+        <p>Cashprize Total : $ @Model.CashpriceTotal</p>
+        <p class="text-start">@Model.Description</p>
+    </div>
 
-<div>
-    <h4>Equipe</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CashpriceTotal)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CashpriceTotal)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Pays)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pays.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="droite">
+    </div>
 </div>
